--- a/GUI/ItemManagement/AddItemsGUI.form
+++ b/GUI/ItemManagement/AddItemsGUI.form
@@ -65,22 +65,6 @@
           <text value="Selling Price"/>
         </properties>
       </component>
-      <component id="bfc90" class="javax.swing.JTextField" binding="sPriceField">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="647eb" class="javax.swing.JTextField" binding="pPriceField">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="f36fb" class="javax.swing.JTextField" binding="quantityField">
         <constraints>
           <grid row="8" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -215,6 +199,22 @@
           <foreground color="-16777216"/>
           <text value="Logout"/>
         </properties>
+      </component>
+      <component id="c2e04" class="javax.swing.JFormattedTextField" binding="sPriceFormattedText">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="d650d" class="javax.swing.JFormattedTextField" binding="pPriceFormattedText">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
