--- a/GUI/ItemManagement/EditItemsGUI.form
+++ b/GUI/ItemManagement/EditItemsGUI.form
@@ -108,14 +108,6 @@
           <text value="Purchase Price"/>
         </properties>
       </component>
-      <component id="bfcb2" class="javax.swing.JTextField" binding="pPriceField">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="22621" class="javax.swing.JLabel">
         <constraints>
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -190,14 +182,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="3b8cb" class="javax.swing.JTextField" binding="sPriceField">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="6b82c" class="javax.swing.JComboBox" binding="vendorCombo">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
@@ -216,6 +200,22 @@
           <foreground color="-16777216"/>
           <text value="Logout"/>
         </properties>
+      </component>
+      <component id="26431" class="javax.swing.JFormattedTextField" binding="sPriceFormattedText">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="79a51" class="javax.swing.JFormattedTextField" binding="pPriceFormattedText">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
