--- a/GUI/MainMenu/MainMenuGUI.form
+++ b/GUI/MainMenu/MainMenuGUI.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.MainMenu.MainMenuGUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="400" height="200"/>
+      <xy x="20" y="20" width="497" height="250"/>
     </constraints>
     <properties>
       <background color="-7171438"/>
-      <minimumSize width="400" height="200"/>
-      <preferredSize width="400" height="200"/>
+      <minimumSize width="400" height="230"/>
+      <preferredSize width="400" height="230"/>
     </properties>
     <border type="none"/>
     <children>
@@ -30,7 +30,7 @@
       </component>
       <component id="12ad2" class="javax.swing.JButton" binding="logoutButton">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Logout"/>
@@ -68,6 +68,14 @@
         </constraints>
         <properties>
           <text value="Customer Order Management"/>
+        </properties>
+      </component>
+      <component id="a4232" class="javax.swing.JButton" binding="customerInvoiceManagementButton">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Customer Invoice Management"/>
         </properties>
       </component>
     </children>
