--- a/GUI/VendorManagement/VendorUI.form
+++ b/GUI/VendorManagement/VendorUI.form
@@ -3,11 +3,16 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="567" height="279"/>
+      <xy x="18" y="21" width="691" height="400"/>
     </constraints>
     <properties>
-      <background color="-8604565"/>
+      <autoscrolls value="false"/>
+      <background color="-1118482"/>
       <foreground color="-16777216"/>
+      <inheritsPopupMenu value="false"/>
+      <maximumSize width="10000" height="10000"/>
+      <minimumSize width="400" height="400"/>
+      <preferredSize width="706" height="250"/>
     </properties>
     <border type="none"/>
     <children>
@@ -34,7 +39,7 @@
       </component>
       <component id="7a2cc" class="javax.swing.JButton" binding="btnGo">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Go"/>
@@ -46,7 +51,8 @@
         </constraints>
         <properties>
           <enabled value="true"/>
-          <text value="View Profiles"/>
+          <label value="View Vendors"/>
+          <text value="View Vendors"/>
         </properties>
       </component>
       <component id="46ed8" class="javax.swing.JButton" binding="btnCreateProfile">
@@ -54,7 +60,8 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Create Profile"/>
+          <label value="Create Vendor"/>
+          <text value="Create Vendor"/>
         </properties>
       </component>
       <component id="4d6e1" class="javax.swing.JButton" binding="btnUpdateProfile">
@@ -62,7 +69,8 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Update Profile"/>
+          <label value="Update Vendor"/>
+          <text value="Update Vendor"/>
         </properties>
       </component>
       <component id="1715d" class="javax.swing.JButton" binding="btnDeleteProfile">
@@ -70,12 +78,13 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Delete Profile"/>
+          <label value="Delete Vendor"/>
+          <text value="Delete Vendor"/>
         </properties>
       </component>
       <component id="75dfc" class="javax.swing.JButton" binding="btnMainMenu">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Main Menu"/>
@@ -83,13 +92,13 @@
       </component>
       <component id="d5a63" class="javax.swing.JButton" binding="btnLogOut">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Log Out"/>
         </properties>
       </component>
-      <grid id="4dfff" binding="pnlListBackground" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="4dfff" binding="pnlListBackground" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="5" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -118,9 +127,18 @@
               </component>
             </children>
           </scrollpane>
+          <component id="8f63c" class="javax.swing.JLabel" binding="lblListInfo">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <autoscrolls value="false"/>
+              <text value="Name, Phone Number, Balance, Last Paid Amount, Last Order Date, Seasonal Discounts Start Date"/>
+            </properties>
+          </component>
           <component id="bfc0c" class="javax.swing.JList" binding="lstSearchResults">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="false">
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
