--- a/GUI/VendorManagement/VendorUI.form
+++ b/GUI/VendorManagement/VendorUI.form
@@ -122,14 +122,17 @@
                 <properties>
                   <background color="-1"/>
                   <enabled value="true"/>
+                  <layoutOrientation value="2"/>
+                  <opaque value="true"/>
                   <selectionMode value="0"/>
+                  <visible value="true"/>
                 </properties>
               </component>
             </children>
           </scrollpane>
           <component id="8f63c" class="javax.swing.JLabel" binding="lblListInfo">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <autoscrolls value="false"/>
@@ -145,6 +148,7 @@
             <properties>
               <background color="-1"/>
               <model/>
+              <selectionMode value="0"/>
             </properties>
           </component>
         </children>
