--- a/GUI/InvoiceManagement/InvoiceDisplayGUI.form
+++ b/GUI/InvoiceManagement/InvoiceDisplayGUI.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="f9f95" binding="detailPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f9f95" binding="detailPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -23,12 +23,28 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="ffc8e" class="javax.swing.JLabel">
+          <component id="ffc8e" class="javax.swing.JLabel" binding="invoiceDetails">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="7f45c" class="javax.swing.JButton" binding="leaveButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Leave"/>
+            </properties>
+          </component>
+          <component id="7e0ff" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Logout"/>
             </properties>
           </component>
         </children>
@@ -47,7 +63,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="f8c8d" class="javax.swing.JLabel">
+          <component id="f8c8d" class="javax.swing.JLabel" binding="invoiceHeader">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -71,12 +87,13 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="35417" class="javax.swing.JLabel">
+          <component id="35417" class="javax.swing.JLabel" binding="invoiceCreated">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <foreground color="-16777216"/>
+              <text value="Invoice Created"/>
             </properties>
           </component>
         </children>
