--- a/GUI/InvoiceManagement/InvoiceGUI.form
+++ b/GUI/InvoiceManagement/InvoiceGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.InvoiceManagement.InvoiceGUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="780" height="400"/>
@@ -12,7 +12,7 @@
     <children>
       <vspacer id="c72ad">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="eded8" class="javax.swing.JTextField" binding="searchField">
@@ -25,7 +25,7 @@
       </component>
       <component id="3fb13" class="javax.swing.JList" binding="iList">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="600" height="175"/>
             <preferred-size width="600" height="175"/>
             <maximum-size width="600" height="175"/>
@@ -35,7 +35,7 @@
       </component>
       <component id="bd711" class="javax.swing.JButton" binding="leaveButton">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="78" height="48"/>
             <preferred-size width="78" height="48"/>
             <maximum-size width="78" height="48"/>
@@ -59,7 +59,7 @@
       </component>
       <component id="eb0ec" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="78" height="48"/>
             <preferred-size width="78" height="48"/>
             <maximum-size width="78" height="48"/>
@@ -71,7 +71,7 @@
       </component>
       <component id="2afc5" class="javax.swing.JButton" binding="createInvoiceButton">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="130" height="48"/>
             <preferred-size width="130" height="48"/>
             <maximum-size width="130" height="48"/>
@@ -91,7 +91,16 @@
         </constraints>
         <properties>
           <foreground color="-16777216"/>
-          <text value="Invoice Label"/>
+          <text value="Search Name"/>
+        </properties>
+      </component>
+      <component id="2df8e" class="javax.swing.JLabel" binding="InvoiceNameLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16777216"/>
+          <text value="Customer Orders With Searhed Name"/>
         </properties>
       </component>
     </children>
