--- a/GUI/ProfitSearch/ProfitSearchGUI.form
+++ b/GUI/ProfitSearch/ProfitSearchGUI.form
@@ -2,40 +2,117 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.ProfitSearch.ProfitSearchGUI">
   <grid id="27dc6" binding="rootPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="400" height="300"/>
+      <xy x="20" y="20" width="350" height="220"/>
     </constraints>
     <properties>
       <background color="-7171438"/>
-      <minimumSize width="400" height="300"/>
-      <preferredSize width="400" height="400"/>
+      <minimumSize width="350" height="220"/>
+      <preferredSize width="350" height="220"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="875ec" binding="profitSearchPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="875ec" binding="profitSearchPanel" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties>
           <background color="-7171438"/>
+          <minimumSize width="263" height="95"/>
+          <preferredSize width="263" height="95"/>
         </properties>
         <border type="none"/>
         <children>
           <component id="6c19c" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground color="-16777216"/>
               <text value="Item Name"/>
             </properties>
           </component>
+          <component id="cc857" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-16777216"/>
+              <text value="Start Date"/>
+            </properties>
+          </component>
+          <component id="f218" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-16777216"/>
+              <text value="End Date"/>
+            </properties>
+          </component>
+          <component id="7a83" class="javax.swing.JFormattedTextField" binding="itemNameTextField">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="6c6cb" class="javax.swing.JFormattedTextField" binding="startDateTextField">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="8ca6a" class="javax.swing.JFormattedTextField" binding="endDateTextField">
+            <constraints>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <hspacer id="bc8f2">
+            <constraints>
+              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <hspacer id="ea632">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="20" height="20"/>
+              </grid>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
-      <grid id="e9802" binding="buttonPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="e9802" binding="buttonPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints border-constraint="South"/>
-        <properties/>
+        <properties>
+          <background color="-7171438"/>
+          <minimumSize width="271" height="30"/>
+        </properties>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="5ca25" class="javax.swing.JButton" binding="searchButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Search"/>
+            </properties>
+          </component>
+          <component id="a3851" class="javax.swing.JButton" binding="mainMenuButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Main Menu"/>
+            </properties>
+          </component>
+          <component id="edb0e" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Logout"/>
+            </properties>
+          </component>
+        </children>
       </grid>
     </children>
   </grid>
